1.new tab layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:windowSoftInputMode="adjustPan"
         android:theme="@style/AppTheme.NoActionBar" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -26,10 +27,10 @@
 
         <activity
             android:name=".MainPageActivity"
+            android:windowSoftInputMode="adjustPan"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -43,10 +44,6 @@
         </activity>
         <activity
             android:name=".JoinGroupActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name=".CreateEventActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
