--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,16 +25,19 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
         <activity
-            android:name=".MainPageActivity"
-            android:label="@string/app_name"
-            android:windowSoftInputMode="adjustPan">
+            android:name=".LoginActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainPageActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan">
         </activity>
         <activity
             android:name=".ProfileActivity"
@@ -51,10 +54,6 @@
         <activity
             android:name=".EventDetailActivity"
             android:label="@string/title_activity_event_detail" />
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SignupActivity"
             android:label="@string/title_activity_signup"
